test/subjects/invalid/prepostop_error2.php
<?php
	++f(); // { Error: Variable name expected }
?>
